--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,15 +1,15 @@
 <section class="clean-block clean-form dark">
     <div class="container">
         <div class="block-heading">
-            <h2 class="text-info">Log In</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+            <h2 class="text-info">Đăng nhập</h2>
         </div>
         <form>
             <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email" data-bs-theme="light"></div>
-            <div class="mb-3"><label class="form-label" for="password">Password</label><input class="form-control" type="password" id="password" data-bs-theme="light"></div>
+            <div class="mb-3"><label class="form-label" for="password">Mật khẩu</label><input class="form-control" type="password" id="password" data-bs-theme="light"></div>
             <div class="mb-3">
-                <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox" data-bs-theme="light"><label class="form-check-label" for="checkbox">Remember me</label></div>
-            </div><button class="btn btn-primary" type="submit">Log In</button>
+                <label>Chưa có tài khoản? <a href="/user/register" class="fw-bold">Đăng ký</a> </label>
+            </div>
+            <button class="btn btn-primary" type="submit">Đăng nhập</button>
         </form>
     </div>
 </section>
