--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,16 +1,33 @@
-<section class="clean-block clean-form dark">
+<section class="clean-block clean-form dark" ng-controller="RegisterController" ng-init="Init()">
     <div class="container">
         <div class="block-heading">
             <h2 class="text-info">Đăng ký</h2>
         </div>
-        <form>
-            <div class="mb-3"><label class="form-label" for="fullname">Tên đầy đủ</label><input class="form-control item" type="text" id="fullname" data-bs-theme="light"></div>
-            <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email" data-bs-theme="light"></div>
-            <div class="mb-3"><label class="form-label" for="password">Password</label><input class="form-control" type="password" id="password" data-bs-theme="light"></div>
+        <form id="from-register" action="javascript:void(0);">
+            <div class="mb-3">
+                <div class="row">
+                    <label class="form-label col-4" for="fullname">Tên đầy đủ</label>
+                    <label class="col text-end text-warning">{{FullNameWarning}}</label>
+                </div>
+                <input class="form-control item" type="text" id="fullname" ng-model="FullName" data-bs-theme="light">
+            </div>
+            <div class="mb-3">
+                <div class="row">
+                    <label class="form-label col-4" for="email">Email</label>
+                    <label class="col text-end text-danger">{{EmailWarning}}</label>
+                </div>
+                <input class="form-control item" id="email" ng-model="Email" ng-blur="ValidateEmail()" data-bs-theme="light">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" id="password"  ng-model="Password" data-bs-theme="light">
+            </div>
             <div class="mb-3">
                 <label>Đã có tài khoản? <a href="/user/login" class="fw-bold">Đăng nhập</a> </label>
             </div>
-            <button class="btn btn-primary" type="submit">Đăng nhập</button>
+            <button class="btn btn-primary" ng-click="Register()">Đăng ký</button>
         </form>
     </div>
 </section>
+
+<script defer src="/public/javascripts/users/register.js"></script>
